@@ -1,15 +1,16 @@
 package com.thigas.quack.infrastructure.persistence.repository;
 
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
+import com.thigas.quack.adapter.mapper.AddressMapper;
 import com.thigas.quack.domain.entity.Address;
-import com.thigas.quack.domain.entity.User;
 import com.thigas.quack.domain.repository.IAddressRepository;
 import com.thigas.quack.infrastructure.persistence.entity.AddressModel;
-import com.thigas.quack.infrastructure.persistence.entity.UserModel;
 
 @Repository
 public class AddressRepositoryImplementation implements IAddressRepository {
@@ -17,62 +18,29 @@ public class AddressRepositoryImplementation implements IAddressRepository {
     @Autowired
     private IAddressModelRepository addressModelRepository;
 
+    private final AddressMapper addressMapper = AddressMapper.INSTANCE;
+
     @Override
     public Address save(Address address) {
-        AddressModel addressModel = mapToAddressModel(address);
-        return mapToAddress(addressModelRepository.save(addressModel));
+        AddressModel addressModel = addressMapper.toAddressModel(address);
+        AddressModel savedAddressModel = addressModelRepository.save(addressModel);
+        return addressMapper.toAddress(savedAddressModel);
     }
 
     @Override
     public Optional<Address> findById(Long id) {
-        return addressModelRepository.findById(id).map(this::mapToAddress);
+        return addressModelRepository.findById(id).map(addressMapper::toAddress);
     }
 
     @Override
     public Iterable<Address> findAll() {
-        return addressModelRepository.findAll().stream().map(this::mapToAddress).toList();
+        return StreamSupport.stream(addressModelRepository.findAll().spliterator(), false)
+                .map(addressMapper::toAddress)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Long id) {
         addressModelRepository.deleteById(id);
-    }
-
-    private Address mapToAddress(AddressModel addressModel) {
-        Address address = new Address();
-        address.setId(addressModel.getId());
-        address.setUser(mapToUser(addressModel.getUser()));
-        address.setStreet(addressModel.getStreet());
-        address.setCity(addressModel.getCity());
-        address.setState(addressModel.getState());
-        address.setCountry(addressModel.getCountry());
-        address.setZipCode(addressModel.getZipCode());
-        address.setNumber(addressModel.getNumber());
-        return address;
-    }
-
-    private AddressModel mapToAddressModel(Address address) {
-        AddressModel addressModel = new AddressModel();
-        addressModel.setId(address.getId());
-        addressModel.setUser(mapToUserModel(address.getUser()));
-        addressModel.setStreet(address.getStreet());
-        addressModel.setCity(address.getCity());
-        addressModel.setState(address.getState());
-        addressModel.setCountry(address.getCountry());
-        addressModel.setZipCode(address.getZipCode());
-        addressModel.setNumber(address.getNumber());
-        return addressModel;
-    }
-
-    private User mapToUser(UserModel userModel) {
-        User user = new User();
-        user.setId(userModel.getId());
-        return user;
-    }
-
-    private UserModel mapToUserModel(User user) {
-        UserModel userModel = new UserModel();
-        userModel.setId(user.getId());
-        return userModel;
     }
 }
